--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@actions/github": "^4.0.0",
     "@yarnpkg/lockfile": "^1.1.0",
     "markdown-table": "^3.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.25.0"
   }
 }
