--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@actions/exec": "^1.0.4",
     "@actions/github": "^4.0.0",
     "@yarnpkg/lockfile": "^1.1.0",
-    "markdown-table": "^3.0.0"
+    "markdown-table": "^3.0.0",
+    "node-fetch": "^2.6.1"
   }
 }
