--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "@yarnpkg/lockfile": "^1.1.0",
     "markdown-table": "^3.0.0",
     "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.25.0"
   }
 }
