--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,17 +9,12 @@
     "ecmaVersion": 12
   },
   "rules": {
-    "indent": [
-      "error",
-      2
-    ],
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "semi": [
-      "error",
-      "always"
-    ]
+    "indent": ["error", 2],
+    "no-extra-parens": ["error", "all"],
+    "no-var": "error",
+    "prefer-arrow-callback": "error",
+    "prefer-const": "error",
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"]
   }
 }
