--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,11 @@
     "es2021": true,
     "node": true
   },
-  "extends": "eslint:recommended",
+  "plugins": ["prettier"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:prettier/recommended"
+  ],
   "parserOptions": {
     "ecmaVersion": 12
   },
