--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "lint": "eslint action.js"
   },
   "dependencies": {
-    "@actions/core": "^1.2.6",
+    "@actions/core": "^1.2.7",
     "@actions/github": "^4.0.0",
     "@yarnpkg/lockfile": "^1.1.0",
     "markdown-table": "^3.0.0",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
-    "eslint": "^7.25.0"
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1"
   }
 }
