--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@actions/core": "^1.2.7",
     "@actions/github": "^4.0.0",
     "@yarnpkg/lockfile": "^1.1.0",
+    "compare-versions": "^3.6.0",
     "markdown-table": "^3.0.0",
     "node-fetch": "^2.6.1"
   },
