--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "compile": "ncc build action.js -m",
-    "lint": "eslint action.js"
+    "lint": "eslint action.js",
+    "optimize": "svgo -f ./assets"
   },
   "dependencies": {
     "@actions/core": "^1.2.7",
@@ -21,6 +22,7 @@
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "svgo": "^2.3.0"
   }
 }
