--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "@yarnpkg/lockfile": "^1.1.0",
     "compare-versions": "^3.6.0",
     "markdown-table": "^3.0.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "js-base64": "^3.6.0"
   },
   "devDependencies": {
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1",
-    "simple-git-hooks": "^2.4.1",
     "svgo": "^2.3.0"
   }
 }
