--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   },
   "devDependencies": {
     "eslint": "^7.25.0",
-    "eslint-config-prettier": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.2.1",
+    "simple-git-hooks": "^2.4.1",
     "svgo": "^2.3.0"
   }
 }
