--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.2.1",
-    "svgo": "^2.3.0",
-    "simple-git-hooks": "^2.4.1"
+    "svgo": "^2.3.0"
   }
 }
