add ability to collapse comment content and collapsibleThreshold input

--- a/action.yml
+++ b/action.yml
@@ -4,6 +4,10 @@ branding:
   icon: 'copy'
   color: 'purple'
 inputs:
+  collapsibleThreshold:
+    description: 'Number of lock changes, which will result in collapsed comment content.'
+    required: false
+    default: '20'
   path:
     description: 'Path to the `yarn.lock` file in the repository. Default value points to the file at project root.'
     required: false
