--- a/action.yml
+++ b/action.yml
@@ -16,7 +16,7 @@ inputs:
     description: 'GitHub token for the bot, so it can publish a comment in the pull request.'
     required: true
   updateComment:
-    description: 'Should the bot update the summary comment. If value is other than default, bot will post new comment on each new commit.'
+    description: 'Should the bot update the summary comment. If value is `false`, bot will post a new comment on each new commit.'
     required: false
     default: 'true'
 runs:
