--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "svgo": "^2.3.0"
   }
 }
