--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,10 @@ inputs:
     description: 'Number of lock changes, which will result in collapsed comment content an addition of summary table.'
     required: false
     default: '25'
+  failOnDowngrade:
+    description: 'When a dependency downgrade is detected, fail the action.'
+    required: false
+    default: 'false'
   path:
     description: 'Path to the `yarn.lock` file in the repository. Default value points to the file at project root.'
     required: false
@@ -16,7 +20,7 @@ inputs:
     description: 'GitHub token for the bot, so it can publish a comment in the pull request.'
     required: true
   updateComment:
-    description: 'Should the bot update the summary comment. If value is `false`, bot will post a new comment on each new commit.'
+    description: 'Update the comment on each new commit. If value is set to `false`, bot will post a new one on each change.'
     required: false
     default: 'true'
 runs:
