add stub package for the future tests, attach to workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,8 @@ jobs:
         uses: ./
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Yarn Lock Changes Detached Package
+        uses: ./
+        with:
+          path: tests/detached/yarn.lock
+          token: ${{ secrets.GITHUB_TOKEN }}
