fix main workflow, add test workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         uses: ./
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-      - name: [Test] Yarn Lock Changes Detached Package
+      - name: '[Test] Yarn Lock Changes Detached Package'
         uses: ./
         with:
           path: tests/ci/yarn.lock
