--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@actions/core": "^1.5.0",
     "@actions/github": "^5.0.0",
     "@yarnpkg/lockfile": "^1.1.0",
-    "compare-versions": "^3.6.0",
     "js-base64": "^3.6.1",
-    "markdown-table": "^3.0.1"
+    "markdown-table": "^3.0.1",
+    "semver": "^7.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
