--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
   "name": "yarn-lock-changes",
-  "version": "0.0.1",
+  "version": "0.8.1",
   "main": "dist/index.js",
   "repository": "github:Simek/yarn-lock-changes",
   "author": "Simek <me@simek.dev>",
   "license": "MIT",
   "scripts": {
-    "compile": "ncc build ./src/action.js -m",
+    "build": "ncc build ./src/action.js -m",
     "lint": "eslint .",
     "optimize": "svgo -f ./assets",
     "test": "jest"
   },
   "dependencies": {
-    "@actions/core": "^1.5.0",
+    "@actions/core": "^1.6.0",
     "@actions/github": "^5.0.0",
     "@yarnpkg/lockfile": "^1.1.0",
-    "js-base64": "^3.6.1",
-    "markdown-table": "^3.0.1",
+    "js-base64": "^3.7.2",
+    "markdown-table": "^3.0.2",
     "semver": "^7.3.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "babel-jest": "^27.0.6",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^24.4.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "jest": "^27.0.6",
-    "prettier": "^2.3.2",
-    "svgo": "^2.4.0"
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "@vercel/ncc": "^0.33.3",
+    "babel-jest": "^27.5.1",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.5.1",
+    "prettier": "^2.5.1",
+    "svgo": "^2.8.0"
   }
 }
