use Node 16 as default runner, bump dependencies

--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
   "name": "yarn-lock-changes",
-  "version": "0.8.1",
+  "version": "0.9.0",
   "main": "dist/index.js",
   "repository": "github:Simek/yarn-lock-changes",
   "author": "Simek <me@simek.dev>",
   "license": "MIT",
   "scripts": {
-    "build": "ncc build ./src/action.js -m",
+    "build": "ncc build ./src/action.js -m --target es2021",
     "lint": "eslint .",
     "optimize": "svgo -f ./assets",
     "test": "jest"
   },
   "dependencies": {
     "@actions/core": "^1.6.0",
-    "@actions/github": "^5.0.0",
+    "@actions/github": "^5.0.1",
     "@yarnpkg/lockfile": "^1.1.0",
     "js-base64": "^3.7.2",
     "markdown-table": "^3.0.2",
-    "semver": "^7.3.5"
+    "semver": "^7.3.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.12",
+    "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
-    "@vercel/ncc": "^0.33.3",
+    "@vercel/ncc": "^0.33.4",
     "babel-jest": "^27.5.1",
-    "eslint": "^8.10.0",
+    "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-jest": "^26.1.4",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.2",
     "svgo": "^2.8.0"
   }
 }
