--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,13 +4,17 @@ on: [pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [16, 18, 20]
+    name: Testing on Node ${{ matrix.node }}
     steps:
     - name: '🚚 Checkout'
       uses: actions/checkout@v3
     - name: '🔧 Setup Node'
       uses: actions/setup-node@v3
       with:
-        node-version: '16'
+        node-version: ${{ matrix.node }}
     - name: '📦️ Install dependencies'
       run: yarn
     - name: '🧪 Run Unit tests'
