--- a/package.json
+++ b/package.json
@@ -9,27 +9,24 @@
     "build": "ncc build ./src/action.js -m --target es2021",
     "lint": "eslint .",
     "optimize": "svgo -f ./assets",
-    "test": "jest"
+    "test": "uvu tests -i .cjs -i testUtils"
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "@actions/github": "^5.1.1",
-    "js-base64": "^3.7.5",
+    "@actions/github": "^6.0.0",
+    "js-base64": "^3.7.6",
     "markdown-table": "^3.0.3",
     "semver": "^7.5.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
     "@vercel/ncc": "^0.38.1",
     "@yarnpkg/lockfile": "^1.1.0",
-    "babel-jest": "^29.7.0",
-    "eslint": "^8.52.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-jest": "^27.4.3",
-    "eslint-plugin-prettier": "^5.0.1",
-    "jest": "^29.7.0",
-    "prettier": "^3.0.3",
-    "svgo": "^3.0.2"
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^27.6.3",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.4",
+    "svgo": "^3.2.0",
+    "uvu": "^0.5.6"
   }
 }
