--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: '🔏 Yarn Lock Changes'
+name: '🔏 NPM Lock Changes'
 on: [pull_request]
 
 jobs:
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: '🚚 Checkout'
         uses: actions/checkout@v4
-      - name: '🔏 Yarn Lock Changes'
+      - name: '🔏 NPM Lock Changes'
         uses: ./
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
