--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
-    "js-base64": "^3.7.6",
+    "js-base64": "^3.7.7",
     "markdown-table": "^3.0.3",
-    "semver": "^7.5.4"
+    "semver": "^7.6.2"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.38.1",
     "@yarnpkg/lockfile": "^1.1.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^27.6.3",
+    "eslint-plugin-n": "^17.6.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.2.4",
-    "svgo": "^3.2.0",
+    "prettier": "^3.2.5",
+    "svgo": "^3.3.2",
     "uvu": "^0.5.6"
   }
 }
