--- a/package.json
+++ b/package.json
@@ -16,17 +16,23 @@
     "@actions/github": "^6.0.0",
     "js-base64": "^3.7.7",
     "markdown-table": "^3.0.4",
-    "semver": "^7.6.3"
+    "semver": "^7.7.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@vercel/ncc": "^0.38.3",
     "@yarnpkg/lockfile": "^1.1.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-n": "^17.14.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "prettier": "^3.3.3",
+    "eslint": "^9.20.1",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-n": "^17.15.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^15.15.0",
+    "prettier": "^3.5.1",
     "svgo": "^3.3.2",
     "uvu": "^0.5.6"
+  },
+  "volta": {
+    "node": "22.14.0",
+    "yarn": "1.22.22"
   }
 }
