--- a/package.json
+++ b/package.json
@@ -19,20 +19,21 @@
     "semver": "^7.7.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.20.0",
+    "@eslint/js": "^9.26.0",
     "@vercel/ncc": "^0.38.3",
     "@yarnpkg/lockfile": "^1.1.0",
-    "eslint": "^9.20.1",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-n": "^17.15.1",
-    "eslint-plugin-prettier": "^5.2.3",
-    "globals": "^15.15.0",
-    "prettier": "^3.5.1",
+    "@yarnpkg/parsers": "^3.0.3",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-n": "^17.17.0",
+    "eslint-plugin-prettier": "^5.3.1",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3",
     "svgo": "^3.3.2",
     "uvu": "^0.5.6"
   },
   "volta": {
-    "node": "22.14.0",
+    "node": "22.15.0",
     "yarn": "1.22.22"
   }
 }
