update workflows, tests against Node 24, small tweaks

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,13 +6,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [18, 20, 22]
+        node: [18, 20, 22, 24]
     name: Testing on Node ${{ matrix.node }}
     steps:
     - name: '🚚 Checkout'
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
     - name: '🔧 Setup Node'
-      uses: actions/setup-node@v4
+      uses: actions/setup-node@v6
       with:
         node-version: ${{ matrix.node }}
     - name: '📦️ Install dependencies'
