--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "test": "uvu tests -i .cjs -i testUtils"
   },
   "dependencies": {
-    "@actions/core": "^2.0.1",
-    "@actions/github": "^6.0.1",
+    "@actions/core": "^2.0.2",
+    "@actions/github": "^7.0.0",
     "js-base64": "^3.7.8",
     "markdown-table": "^3.0.4",
     "semver": "^7.7.3"
@@ -25,15 +25,15 @@
     "esbuild": "^0.27.2",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-n": "^17.23.1",
-    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-n": "^17.23.2",
+    "eslint-plugin-prettier": "^5.5.5",
     "globals": "^17.0.0",
-    "prettier": "^3.7.4",
-    "svgo": "^4.0.0",
+    "prettier": "^3.8.1",
     "uvu": "^0.5.6"
   },
   "volta": {
     "node": "24.11.1",
     "yarn": "1.22.22"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
