update action core dependencies, drop Node 18 and 20 support

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [18, 20, 22, 24]
+        node: [22, 24]
     name: Testing on Node ${{ matrix.node }}
     steps:
     - name: '🚚 Checkout'
