--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "build": "esbuild src/action.js --bundle --platform=node --target=node22 --minify --legal-comments=none --outfile=dist/index.js",
-    "lint": "eslint .",
+    "lint": "oxlint && oxfmt --check",
+    "lint:fix": "oxlint --fix && oxfmt",
     "optimize": "svgo -f ./assets",
     "test": "uvu tests -i .cjs -i testUtils"
   },
@@ -19,16 +20,11 @@
     "semver": "^7.7.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.2",
     "@yarnpkg/lockfile": "^1.1.0",
     "@yarnpkg/parsers": "^3.0.3",
     "esbuild": "^0.27.2",
-    "eslint": "^9.39.2",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-n": "^17.23.2",
-    "eslint-plugin-prettier": "^5.5.5",
-    "globals": "^17.2.0",
-    "prettier": "^3.8.1",
+    "oxfmt": "^0.27.0",
+    "oxlint": "^1.42.0",
     "uvu": "^0.5.6"
   },
   "volta": {
