--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yarn-lock-changes",
   "version": "0.13.0",
   "main": "dist/index.js",
+  "type": "commonjs",
   "repository": "github:Simek/yarn-lock-changes",
   "author": "Simek <me@simek.dev>",
   "license": "MIT",
